[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -92.0
margin_right = 123.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 123.0
margin_bottom = 20.0
text = "Start"

[node name="Leaderboards" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 123.0
margin_bottom = 44.0
text = "Leaderboards"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 123.0
margin_bottom = 68.0
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 123.0
margin_bottom = 92.0
text = "Quit"

[node name="Store" type="Button" parent="."]
margin_left = 343.0
margin_top = 529.0
margin_right = 407.0
margin_bottom = 594.0
text = "Store"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboards" to="." method="_on_Leaderboards_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
